<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculadoraJosema.CalculadoraJosema">

    <LinearLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_marginEnd="50sp"
            android:layout_marginStart="50sp"
            android:layout_height="wrap_content"
            android:text="@string/screen_text"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:background="#41434A"
            android:layout_marginBottom="50sp"/>


        <LinearLayout
            android:id="@+id/fila2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_7"
                android:text="@string/button_7"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_8"
                android:textSize="30sp"
                android:text="@string/button_8"
                android:textColor="@color/white"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_9"
                android:textSize="30sp"
                android:text="@string/button_9"
                android:textColor="@color/white"
                android:layout_width="90sp"
                android:layout_height="match_parent"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_dividir"
                android:textSize="30sp"
                android:text="@string/divide"
                android:textColor="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_4"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:text="@string/button_4"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_5"
                android:text="@string/button_5"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_6"
                android:text="@string/button_6"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>


            <Button
                android:id="@+id/boton_multiplicar"
                android:text="@string/times"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:textColor="@color/orange"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_1"
                android:text="@string/button_1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_2"
                android:text="@string/button_2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_3"
                android:text="@string/button_3"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_menos"
                android:text="@string/minus"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_atras"
                android:text="@string/erase"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/boton_0"
                android:textColor="@color/white"
                android:text="@string/button_0"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/boton_punto"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:text="@string/dot"
                android:textSize="30sp"
                android:layout_width="90sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/boton_mas"
                android:textColor="@color/orange"
                android:text="@string/sum"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15sp">

            <Button
                android:id="@+id/boton_ce"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:textSize="30sp"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/boton_igual"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:textSize="30sp"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/calculate"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:title="CALCULADORA"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>