<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".calculadoraEloy.CalculadoraEloy">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="15dp"
            android:background="@android:drawable/btn_default_small"
            android:id="@+id/screen_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:text="@string/screen_text"
            android:layout_marginVertical="50dp"
            android:textSize="50sp" />

        <RadioGroup
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/Line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    android:backgroundTint="@color/white"
                    android:layout_margin="3sp"
                    tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:backgroundTint="@color/white"
                    android:layout_margin="3sp"
                    tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times"
                    android:backgroundTint="@color/white"
                    android:layout_margin="3sp"
                    tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divide"
                    android:backgroundTint="@color/white"
                    android:layout_margin="3sp"
                    tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="200sp"
                    android:text="@string/calculate"
                    android:backgroundTint="@color/white"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:id="@+id/line2.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/line2.1.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="wrap_content"
                            android:layout_height="95dp"
                            android:layout_margin="2sp"
                            android:text="@string/button_7"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_8"
                            android:layout_margin="2sp"
                            tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_9"
                            android:layout_margin="2sp"
                            tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line2.1.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <Button
                            android:id="@+id/button4"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_4"
                    android:layout_margin="2sp"
                            tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>
                        <Button
                            android:id="@+id/button5"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_5"
                    android:layout_margin="2sp"
                            tools:ignore="ButtonStyle"
                    android:textSize="30sp"/>

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_6"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="200sp"
                    android:text="@string/clear"
                    android:backgroundTint="@color/white"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/line3.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/line3.1.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_1"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_2"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_3"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line3.1.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/buttonErase"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/erase"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/button0"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/button_0"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/buttonDot"
                            android:layout_width="wrap_content"
                            android:layout_height="95sp"
                            android:text="@string/dot"
                            android:layout_margin="2sp"
                            android:textSize="30sp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>